add missing ending html tag

--- a/index.html
+++ b/index.html
@@ -14,3 +14,5 @@
   <p class="text-muted">Copyright © IT SPA. All rights reserved.</p>
   <script type="module" src="src/it-spa.js"></script>
 </body>
+
+</html>
