--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <main></main>
-  <footer>
+  <footer class="footer">
     <div class="footerContainer">
       <div class="footerContainer_translate">
         <span class="mainText">Translate page:</span>
