add ```<strong>``` tag to contact section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <div class="footerContainer_contact">
         <span class="mainText">Contact:</span>
-        <p>tel. xxx-xxx-xxx</p>
-        <p>e-mail: mail@mail.com</p>
+        <p><strong>tel.</strong> xxx-xxx-xxx</p>
+        <p><strong>e-mail:</strong> mail@mail.com</p>
       </div>
     </div>
     <p class="text-muted">Copyright © IT SPA. All rights reserved.</p>
