--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p><strong>e-mail:</strong> mail@mail.com</p>
       </div>
     </div>
-    <p class="text-muted">Copyright © IT SPA. All rights reserved.</p>
+    <p class="text-muted">Copyright © <span class="footerYear"></span> IT SPA. All rights reserved.</p>
   </footer>
   <script type="text/javascript">
     function googleTranslateElementInit() {
@@ -33,6 +33,7 @@
   </script>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="module" src="src/it-spa.js"></script>
+  <script type="module" src="src/yearScript.js"></script>
 </body>
 
 </html>
