add hamburger menu to mobile

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <main></main>
+  <div id="hamburger">☰</div>
   <footer class="footer">
     <div class="footerContainer">
       <div class="footerContainer_translate">
@@ -34,6 +35,7 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="module" src="src/it-spa.js"></script>
   <script type="module" src="src/yearScript.js"></script>
+  <script type="module" src="src/hamburgerScript.js"></script>
 </body>
 
 </html>
